src/tests/snapshots/cendol__tests__pp_expressions__pp_division_by_zero.snap
---
source: src/tests/pp_expressions.rs
expression: diags
---
- "Warning: Invalid conditional expression in preprocessor directive"
